--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "sonarlint.connectedMode.project": {
         "connectionId": "chaumintruong",
         "projectKey": "chaumintruong_AIO_Homework"
-    }
+    },
+    "python.analysis.typeCheckingMode": "basic"
 }
